--- a/my-app/src/Components/Navbar/Navbar.css
+++ b/my-app/src/Components/Navbar/Navbar.css
@@ -70,5 +70,15 @@
     border-radius: 11px;
     background: red;
     color: white;
-    
+}
+@media(max-width:1280px){
+    .navbar{
+        padding: 12px 50px;
+    }
+    .nav-logo img{
+        width: 40px;
+    }
+    .nav-logo p{
+        font-size: 35px;
+    }
 }
